[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "requests-file"
authors = [{name = "David Shea", email = "reallylongword@gmail.com"}]
license = {text = "Apache 2.0"}
description = "File transport adapter for Requests"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/dashea/requests-file"}
dependencies = ["requests>=1.0.0"]
dynamic = ["version"]

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
py-modules = ["requests_file"]
include-package-data = false

[tool.setuptools_scm]
