[metadata]
name = requests-file
author = David Shea
author_email = reallylongword@gmail.com
license = Apache 2.0
description = File transport adapter for Requests
url = http://github.com/dashea/requests-file
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[bdist_wheel]
universal = 1

[options]
py_modules = requests_file
install_requires = requests>=1.0.0
test_suite = tests
